fix: share-view size bug on mobile devices fixed

--- a/app/editor/share/share.styl
+++ b/app/editor/share/share.styl
@@ -2,6 +2,7 @@
     .content-container
         height calc(100vh - 248px)
         min-height 550px
+        margin-bottom 30px
 
         .content.export
             min-height 215px
@@ -30,4 +31,3 @@
 
         .col-md-12
             padding 5px 0
-
